# Particles

./: .gitignore  CMakeLists.txt  Makefile  Particles.filters  Particles.sln  Particles.vcxproj  README.md  cudamemchk.bat
scripts/sharc/: cudamemchk.sh  profile.sh  readme.md  run.sh  run_debug.sh
src/: cpu.c  cuda.cu  cuda.cuh  helper.c  helper.h  main.cu  openmp.c
